[metadata]
name = Lemon-Library
version = 1.3.8
author = Sas2k
url = https://github.com/Sas2k/Lemon
description = An experimental Full-Stack Framework for Python
long_description = file: README.md
long_description_content_type = text/markdown
keywords = setuptools
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9

[options]
packages = file:requirements.txt

[options.entry_points]
console_scripts =
    create-lemon-app = Lemon.create_lemon_app:main


